prevenir cambios si no es el usuario

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,6 +30,11 @@ en:
           attributes:
             mail:
               blank: "is required"
+  helpers:
+    submit:
+      paciente:
+        create: "Crear un %{model}"
+        update: "Confirmar cambios al %{model} creado"
 
 es:
   activerecord:
